@@ -433,22 +433,23 @@ class Document( qt4.QObject ):
             painter.setRenderHint(qt4.QPainter.TextAntialiasing, True)
    
         sizes = []
-        with painter:
-            # This all assumes that only pages can go into the root widget
-            for count, page in enumerate(pages):
-                painter.save()
-                size = self.pageSize(page, dpi=dpi)
-                sizes.append(size)
-                painter.setClipRect(qt4.QRectF(
-                    qt4.QPointF(0,0), qt4.QPointF(*size)))
-                helper = painthelper.PaintHelper(
-                    size, dpi=dpi, directpaint=painter)
-                self.paintTo(helper, page)
-                painter.restore()
 
-                # start new pages between each page
-                if count < len(pages)-1:
-                    printer.newPage()
+        # This all assumes that only pages can go into the root widget
+        for count, page in enumerate(pages):
+            painter.save()
+            size = self.pageSize(page, dpi=dpi)
+            sizes.append(size)
+            painter.setClipRect(qt4.QRectF(
+                qt4.QPointF(0,0), qt4.QPointF(*size)))
+            helper = painthelper.PaintHelper(
+                size, dpi=dpi, directpaint=painter)
+            self.paintTo(helper, page)
+            painter.restore()
+
+            # start new pages between each page
+            if count < len(pages)-1:
+                printer.newPage()
+        painter.end()
 
         return sizes
 
