@@ -5,6 +5,7 @@ Minor changes
  * Fix label colour in contour labelling
  * Remove use of deprecated Qt functions
  * Fix clone widget tools plugin
+ * Fix EPS/PDF crash with broken axis widget
 
 Changes in 1.23:
  * Add new export dialog box which can export multiple pages and
